Concrete embodied agents are now Parametrized.